--- a/public/less/main.less
+++ b/public/less/main.less
@@ -10,6 +10,11 @@ body {
     margin: 0px!important;
 }
 
+a:hover {
+    color: #2e4563!important;
+    text-decoration: none!important;
+}
+
 .header {
     background-image: url('../assets/header.png');
     width: 100%;
@@ -17,18 +22,34 @@ body {
     background-position-y: center;
 }
 
+#memberlist {
+    font-size: 14px;
+    margin: 0px -22px;
+    font-family: system-ui;
+}
+
 
 @media (max-width: 750px) {
-    .header {height: 250px }
+    .header {height: 250px; }
     .wrapper {border: 30px solid #040506;}
     h1 {font-size: 23px;
-        line-height: 22px;}
+     line-height: 22px;
+    }
+
+    #example_paginate {
+        padding-top: 26px;
+    }
+
 }
 
 @media (max-width: 365px) {
     .header {height: 200px }
     .wrapper {border: 0px solid #040506;}
     h1 {font-size: 21px;}
+
+    #example_paginate {
+        padding-top: 26px;
+    }
 }
 
 @media (min-width: 751px) {
@@ -54,6 +75,7 @@ p {
     text-align: justify;
     margin: 5% 0px;
     color: #000;
+    width: 100%;
 }
 
 .wrapper p::first-letter {
@@ -74,6 +96,61 @@ p {
 }
 
 
-/* fonts */
+/* interactivos */
+.button {
+    background-color: #111;
+    border: solid 2px #fff;
+    padding: 8px 25px;
+    font-size: 11px;
+    color: #fff;
+    background: #040506;
+    letter-spacing: 2px;
+    box-shadow: 0px 0px 0px;
+    width: fit-content;
+    font-weight: 300;
+    font-family: monospace;
+    text-transform: uppercase;
+    cursor: pointer;
+}
 
+
+/* tabla */
+input[type="search"] {
+    border: 0px;
+}
+
+[type=search] {
+    outline-offset: -2px;
+    outline: 1px dashed #e0e0e0;
+    -webkit-appearance: none;
+}
+
+select {
+    border: 0px;
+    outline: 0px;
+}
+
+a#example_previous, a#example_next {
+    background: #e3e3e3;
+    color: #040506!important;
+    padding: 10px;
+}
+
+a.paginate_button.current {
+    background: #000;
+    color: #fff;
+    padding: 10px;
+}
+
+table.table-bordered.dataTable {
+    border-right-width: 0;
+    font-weight: 500;
+}
+
+thead {
+    background: #040506;
+    color: #fff;
+}
+
+/* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Biryani:wght@900&family=Gentium+Book+Basic&display=swap');
