--- a/views/normas.html
+++ b/views/normas.html
@@ -1,23 +1,26 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Normas Generales</h1>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+<div class="t2">Ingreso</div>
+    <br><br><b>— Reserva tu FC</b>: Tendrás se llevar a cabo una serie de requisitos para inggresar al fake, lo tipico, ya estarás curtido en esto así que sabrás que lo primero de todo es reservar tu <i>Face Claim</i> en la mensajería privada.
+    <br><br><b>— No repetir FC</b>: Esto ya debes imaginarlo. Para evitar gemelos no deseados, no está permitido repetir Face Claims que ya estén ocupados por otros personajes.
+    <br><br><b>— Mutuals</b>: Es necesario que sigas a todos los miembros a los que sigue esta cuenta, no utilizamos una lista para los miembros ya que no la necesitamos.
+    <br><br><b>— Hashtag</b>: Es importante que el hashtag #NSR sea visible en el perfil para que se refleje que es miembro de nuestra comunidad.
+<br><br>
+<div class="t2">Cuentas</div>
+<br>
+    <br><br><b>— Multicuentas</b>: No hay un límite para las multicuentas, puedes tener dentro del fake tantos OC como quieras mientras sean activos.
+    <br><br><b>— Mutaciones</b>: No se aceptan mutaciones si no ha pasado mínimo 3 semanas desde que se creó.
+<br><br>
+<div class="t2">Inactividad</div>
+<br>
+    <br><br><b>— No todo es "actividad"</b>: Ni Los RT ni las citas cuentan como actividad. Aunque en la lista de usuarios aparezcas como <b>activo</b> estaremos al tanto de si cumple esta condición.
+    <br><br><b>— Hiatus</b>: Para facilitarnos la gestión, se piede que las cuentas ausentes se pongan la marca de "[Hiatus]" o similar en el nombre.
+    <br><br><b>— Solicitar ausencia</b>: Se puede solicitar una ausencia por privado. Sólamente dinos hasta cuando piensas que durará la ausencia y nosotros te mantendremos como miembro.
+    <br><br><b>— Prolongar ausencia</b>: Se necesita un motivo de peso para prolongar la ausencia.
+<br><br>
+<div class="t2">Convivencia</div>
+<br><br><b>— Respeto</b>: Un fake no es nada sin sus miembros, por ello se pide respeto entre ustedes para que la estancia en Narysium rol sea agradable para todos.
+<br><br><b>— Bardos</b>: Cualquier problema que haya en el mismo con algún otro miembro, pedimos que se nos notifique por privado y la administración determinará qué hacer.
+<br><br>
 <%- include(`./partials/bot-part.html`) %>
 
