--- a/public/less/main.less
+++ b/public/less/main.less
@@ -10,6 +10,11 @@ body {
     margin: 0px!important;
 }
 
+thead tr th {
+    border: 1px solid #060606!important;
+}
+
+
 a:hover {
     color: #2e4563!important;
     text-decoration: none!important;
@@ -46,10 +51,6 @@ a:hover {
     .header {height: 200px }
     .wrapper {border: 0px solid #040506;}
     h1 {font-size: 21px;}
-
-    #example_paginate {
-        padding-top: 26px;
-    }
 }
 
 @media (min-width: 751px) {
@@ -67,7 +68,8 @@ h1 {
 
 p {
     margin-top: 0px;
-    font-family: 'Gentium Book Basic', serif;
+    /*font-family: 'Gentium Book Basic', serif;*/
+    
 }
 
 .wrapper {
@@ -87,10 +89,14 @@ p {
 
 .inner_wrapper {
     padding: 9%;
+    font-family: helvetica;
+    font-size: 12px;
+    font-weight: 200!important;
+    line-height: 1.3 !important;
 }
 
 p {
-    font-size: 1.03rem!important;
+    font-size: 13px;
     font-weight: 200!important;
     line-height: 1.3!important;
 }
@@ -152,5 +158,29 @@ thead {
     color: #fff;
 }
 
+.t2 {
+    border-bottom: 1px solid #404040;
+    font-family: 'Playfair Display';
+    font-size: 20px;
+    font-style: italic;
+    letter-spacing: 0;
+    padding-bottom: 5px;
+    padding-top: 10px;
+    width: 300px;
+}
+
+#example_info {
+    display: none;
+}
+
+#example_paginate {
+    padding-top: 26px;
+}
+
+b, strong {
+    font-weight: 700!important;
+}
+
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Biryani:wght@900&family=Gentium+Book+Basic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
