--- a/views/userlist.html
+++ b/views/userlist.html
@@ -3,7 +3,7 @@
     <center><div class="button">Actualizar</div></center><br>
     <div id="memberlist">
         
-        <table id="example" class="table table-striped table-bordered" cellspacing="0">
+        <table id="example" class="table table-bordered" cellspacing="0">
             <thead>
                 <tr>
                     <th>Cuenta</th>
