--- a/views/normas.html
+++ b/views/normas.html
@@ -1,7 +1,7 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Normas Generales</h1>
 <div class="t2">Ingreso</div>
-    <br><br><b>— Reserva tu FC</b>: Tendrás se llevar a cabo una serie de requisitos para inggresar al fake, lo tipico, ya estarás curtido en esto así que sabrás que lo primero de todo es reservar tu <i>Face Claim</i> en la mensajería privada.
+    <br><br><b>— Reserva tu FC</b>: Tendrás que llevar a cabo una serie de requisitos para inggresar al fake, lo tipico, ya estarás curtido en esto así que sabrás que lo primero de todo es reservar tu <i>Face Claim</i> en la mensajería privada.
     <br><br><b>— No repetir FC</b>: Esto ya debes imaginarlo. Para evitar gemelos no deseados, no está permitido repetir Face Claims que ya estén ocupados por otros personajes.
     <br><br><b>— Mutuals</b>: Es necesario que sigas a todos los miembros a los que sigue esta cuenta, no utilizamos una lista para los miembros ya que no la necesitamos.
     <br><br><b>— Hashtag</b>: Es importante que el hashtag #NSR sea visible en el perfil para que se refleje que es miembro de nuestra comunidad.
