--- a/views/userlist.html
+++ b/views/userlist.html
@@ -13,17 +13,20 @@
                 </tr>
             </thead>
             <tbody>
-            <% Object.values(data).map((ix,it) => { %>
+            <% Object.values(members).map((ix,it) => { %>
                 <tr>
                     <td><%= ix["name"] %></td>
-                    <td></td>
+                    <% if(fcs[ix["name"]]) { %>
+                        <td><%= fcs[ix["name"]] %></td>
+                    <% } else { %>
+                        <td></td>  
+                    <% } %> 
                     <td><%= ix["dhm"] %> días</td>
                     <% if(ix["status"] == "activo") { %>
                         <td style="background-color:#a9d8a9"><%= ix["status"] %></td>
                     <% } else { %>
                         <td style="background-color: #dac09c;"><%= ix["status"] %></td>
-                    <% } %>
-                    
+                    <% } %>     
                 </tr>
             <% }) %>  
             </tbody>
