--- a/views/userlist.html
+++ b/views/userlist.html
@@ -37,9 +37,31 @@
     
     <script defer>
     $(".button").click(() => {fetch('/statususer').then(location.reload());});  
-    $(document).ready(function() {
-    $('#example').DataTable();
+    $(document).ready(() => {
+        $('#example').DataTable({ 
+            "language": { 
+                "sProcessing": "Procesando...", 
+                "sLengthMenu": "Mostrar _MENU_ registros", 
+                "sZeroRecords": "No se encontraron resultados", 
+                "sEmptyTable": "Ningún dato disponible en esta tabla", 
+                "sInfo":   "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros", 
+                "sInfoEmpty":  "Mostrando registros del 0 al 0 de un total de 0 registros", 
+                "sInfoFiltered": "(filtrado de un total de _MAX_ registros)", 
+                "sInfoPostFix": "", 
+                "sSearch":  "Buscar:", 
+                "sUrl":   "", 
+                "sInfoThousands": ",", 
+                "sLoadingRecords": "Cargando...", 
+                "oPaginate": { 
+                "sFirst": "Primero", 
+                "sLast": "Último", 
+                "sNext": `<i class="fas fa-angle-right"></i>`, 
+                "sPrevious": `<i class="fas fa-angle-left"></i>` 
+                }
+            }
     });
+});
+    
     </script>
 <%- include(`./partials/bot-part.html`) %>
 
