--- a/views/normas.html
+++ b/views/normas.html
@@ -3,22 +3,41 @@
 <div class="t2">Ingreso</div>
     <br><br><b>— Reserva tu FC</b>: Tendrás que llevar a cabo una serie de requisitos para inggresar al fake, lo tipico, ya estarás curtido en esto así que sabrás que lo primero de todo es reservar tu <i>Face Claim</i> en la mensajería privada.
     <br><br><b>— No repetir FC</b>: Esto ya debes imaginarlo. Para evitar gemelos no deseados, no está permitido repetir Face Claims que ya estén ocupados por otros personajes.
-    <br><br><b>— Mutuals</b>: Es necesario que sigas a todos los miembros a los que sigue esta cuenta, no utilizamos una lista para los miembros ya que no la necesitamos.
+    <br><br><b>— Mutuals</b>: Es necesario que sigas a todos los miembros a los que sigue @narysiumrol, así como la misma cuenta, no utilizamos una lista para los miembros ya que no la necesitamos.
     <br><br><b>— Hashtag</b>: Es importante que el hashtag #NSR sea visible en el perfil para que se refleje que es miembro de nuestra comunidad.
+    <br><br><b>— Nickname</b>: También es importante que en el "@" de twitter, tenga la cadena <b>nsr</b> de la combinación que se prefiera.
 <br><br>
 <div class="t2">Cuentas</div>
     <br><br><b>— Multicuentas</b>: No hay un límite para las multicuentas, puedes tener dentro del fake tantos OC como quieras mientras sean activos.
-    <br><br><b>— Mutaciones</b>: No se aceptan mutaciones si no ha pasado mínimo 3 semanas desde que se creó.
+    <br><br><b>— Mutaciones</b>: No se aceptan mutaciones si no ha pasado mínimo 3 semanas desde que se creó. 
+    <br><br><b>— Semimitaciones/AU</b>: Las semimutaciones o versiones de universo alternativo del PJ no deberán prolongarse más de 1 semana.
 <br><br>
 <div class="t2">Inactividad</div>
+    <br><br><b>— Límite</b>: Hacemos revisión cada dos semanas, lo que supone una expulsión de no haber twitteado nada en esos 14 días.
     <br><br><b>— No todo es "actividad"</b>: Ni Los RT ni las citas cuentan como actividad. Aunque en la lista de usuarios aparezcas como <b>activo</b> estaremos al tanto de si cumple esta condición.
     <br><br><b>— Hiatus</b>: Para facilitarnos la gestión, se piede que las cuentas ausentes se pongan la marca de "[Hiatus]" o similar en el nombre.
     <br><br><b>— Solicitar ausencia</b>: Se puede solicitar una ausencia por privado. Sólamente dinos hasta cuando piensas que durará la ausencia y nosotros te mantendremos como miembro.
     <br><br><b>— Prolongar ausencia</b>: Se necesita un motivo de peso para prolongar la ausencia.
+    <br><br><b>— Foráneos</b>: Se puede seguir a un máximo de 4 cuentas ajenas al fake, sin embargo, interactuar con ellas tampoco cuenta como actividad. <b>Es importante</b> que cada uno se cree una lista de twitter para incluir a todos los foráneos mutuals.
+    <br><br><b>— Despedidas</b>: Agradeceríamos que si te fueras a ir, nos lo comunicases antes para hacer lo propio.
+<br><br>
+<div class="t2">Calidad</div>
+<br><br><b>— Pobreza literaria</b>: Obviamente no vamos a pedir una ortografía perfecta ni una narrativa de Cervantes, pero si nos gustaría que no se limitasen a responder simples <i>-te miro-</i>, o pecar con el uso de emojis, así como las caritas.
+<br><br><b>— Usereo</b>: Está bien querer comunicar algo en modo off-rol, lo que no podemos permitir es que se abuse de este. Si vemos a alguien pasandose con el modo user le llamaremos la atención, y si no aprende la lección comenzaremos a darle strikes.
+<br><br><b>— Godrol/Metarol</b>: A nadie le agrada tener que toparse con estos dos pecados roleros, ni aquí ni en el rol de mesa, por eso tenemos que avisaros de que es motivo de strikes. Por si acaso eres nuevo por aquí, abajo explicaremos qué es cada cosa.
+<br><br>
+<ul>
+    <li><i>Metarol</i>: De forma resumida es hacer uso de información que se supone debería ser desconocida entre personajes. Ser omnisciente, por ejemplo.</li>
+    <li><i>Godrol</i>: También conocido como powergaming se resume en el típico personaje infalible para cualquier accion que desempeñe, todo lo hace bien, nunca fracasa en nada. Esquivarlo todo en un combate es síntoma de godrol.</li>
+</ul>
+<i>A los 3 strikes se dará paso a la expulsión del afectado</i>
 <br><br>
 <div class="t2">Convivencia</div>
-<br><br><b>— Respeto</b>: Un fake no es nada sin sus miembros, por ello se pide respeto entre ustedes para que la estancia en Narysium rol sea agradable para todos.
+<br><br><b>— Respeto</b>: Un fake no es nada sin sus miembros, por ello se pide respeto entre ustedes para que la estancia en Narysium rol sea agradable para todos. No hay frase oculta.
 <br><br><b>— Bardos</b>: Cualquier problema que haya en el mismo con algún otro miembro, pedimos que se nos notifique por privado y la administración determinará qué hacer.
+<br><br><b>— Sexrol</b>: El sexrol está permitido en el fake siempre y cuando sea por mención o mensajería privada.
+<br><br><b>— Contenido sensible</b>: En este fake queremos dejar cierta libertad a la hora de subir "seductives"; Pero existe una línea que separa lo que es una imagen <i>"sugerente y picante pero estética"</i> de una <i>"obscena y grosera" (semen, anatomías desproporcionadas, etc)</i>. Lo segundo está prohibido, esperamos que sepan discernir sobre esta distinción. De todas formas, abusar mucho de este contenido sea de uno u otro será motivo de llamada de atención.
 <br><br>
+ 
 <%- include(`./partials/bot-part.html`) %>
 
