--- a/public/less/main.less
+++ b/public/less/main.less
@@ -51,6 +51,7 @@ a:hover {
     .header {height: 200px }
     .wrapper {border: 0px solid #040506;}
     h1 {font-size: 21px;}
+    .inner_wrapper {font-weight: 500}
 }
 
 @media (min-width: 751px) {
@@ -98,7 +99,7 @@ p {
 
 p {
     font-size: 13px;
-    font-weight: 200!important;
+    font-weight: 200;
     line-height: 1.3!important;
 }
 
