--- a/public/less/main.less
+++ b/public/less/main.less
@@ -51,7 +51,7 @@ a:hover {
     .header {height: 200px }
     .wrapper {border: 0px solid #040506;}
     h1 {font-size: 21px;}
-    .inner_wrapper {font-weight: 500}
+    .inner_wrapper {font-weight: 900!important}
 }
 
 @media (min-width: 751px) {
