--- a/public/less/main.less
+++ b/public/less/main.less
@@ -49,7 +49,7 @@ a:hover {
 
 @media (max-width: 365px) {
     .header {height: 200px }
-    .wrapper {border: 0px solid #040506; margin: 0px}
+    .wrapper {border: 0px solid #040506; margin: 0px;}
     h1 {font-size: 21px;}
     .inner_wrapper {font-weight: 400!important}
 }
