--- a/public/less/main.less
+++ b/public/less/main.less
@@ -36,7 +36,7 @@ a:hover {
 
 @media (max-width: 750px) {
     .header {height: 250px; }
-    .wrapper {border: 30px solid #040506;}
+    .wrapper {border: 30px solid #040506; margin: 5% 0px;}
     h1 {font-size: 23px;
      line-height: 22px;
     }
@@ -56,7 +56,7 @@ a:hover {
 
 @media (min-width: 751px) {
     .header {height: 300px }
-    .wrapper {border: 44px solid #040506;}
+    .wrapper {border: 44px solid #040506; margin: 5% 0px;}
     h1 {line-height: 32px;}
 }
 
@@ -76,7 +76,6 @@ p {
 .wrapper {
     background: #efefef;
     text-align: justify;
-    margin: 5% 0px;
     color: #000;
     width: 100%;
 }
