--- a/views/begin.html
+++ b/views/begin.html
@@ -78,9 +78,11 @@ animation: fadeIn ease 20s;
   	position : relative;
   	text-align: center;
     }
-    /*pc*/@media (max-width: 750px) {img.lighto-on {top: 51.1%;}}
-    /*movil*/@media (max-width: 365px) {img.lighto-on {top: 50%;}}
-    /*tablet*/@media (min-width: 751px) {img.lighto-on {top: 51.1%;}}
+    
+    /*pc*/@media (min-width: 751px) {img.lighto-on {top: 51.1%;}}
+    /*tablet*/@media (max-width: 750px) {img.lighto-on {top: 51.1%;}}
+    /*movil*/@media (max-width: 365px) {img.lighto-on {top: 52%;}}
+
 
     h1 .text-wrapper {
   	position: relative;
