--- a/views/begin.html
+++ b/views/begin.html
@@ -74,14 +74,15 @@ animation: fadeIn ease 20s;
   	font-weight: 300;
     font-size: 0.9em;
     font-style: italic;
-  	letter-spacing: 6px;
+  	letter-spacing: 5px;
   	position : relative;
-  	text-align: center;
+    text-align: center;
+    padding: 0px 26px;
     }
     
     /*pc*/@media (min-width: 751px) {img.lighto-on {top: 51.1%;}}
     /*tablet*/@media (max-width: 750px) {img.lighto-on {top: 51.1%;}}
-    /*movil*/@media (max-width: 365px) {img.lighto-on {top: 52%;}}
+    /*movil*/@media (max-width: 365px) {img.lighto-on {top: 54%;}}
 
 
     h1 .text-wrapper {
