--- a/views/begin.html
+++ b/views/begin.html
@@ -158,8 +158,9 @@ animation: fadeIn ease 20s;
             delay: 0
         });
         
-        console.log($("h1 span span").text(), (100 - $("h1 span span").text().length) * 11);
-        setTimeout(() => { $(".lighto-on").css("opacity", "1"); }, 2450 - ((101 - $("h1 span span").text().length) * 12));
+        // 45.3714 * $("h1 span span").text().length - 0.869511
+        //(0.000300831 * Math.pow()) + (45.3373 *)  + 0.0333779 
+        setTimeout(() => { $(".lighto-on").css("opacity", "1"); },  34.5809 * $("h1 span span").text().length + 476.42  );
     }
 
     animate();
@@ -172,6 +173,7 @@ animation: fadeIn ease 20s;
             case 0: $('h1 span span').html('mayor será tu sombra'); count++; break;
             case 1: $('h1 span span').html('Pero no debes tener miedo'); count++; break;
             case 2: $('h1 span span').html('Pues posees el arma más poderosa de todas'); count++; break;
+            case 3: $('h1 span span').html('hola'); count++; break;
             }
         
             animate();
