--- a/views/begin.html
+++ b/views/begin.html
@@ -160,7 +160,8 @@ animation: fadeIn ease 20s;
         
         // 45.3714 * $("h1 span span").text().length - 0.869511
         //(0.000300831 * Math.pow()) + (45.3373 *)  + 0.0333779 
-        setTimeout(() => { $(".lighto-on").css("opacity", "1"); },  34.5809 * $("h1 span span").text().length + 476.42  );
+        let x = $("h1 span span").text().length;
+        setTimeout(() => { $(".lighto-on").css("opacity", "1"); },  35.2083 * x + 392.857  );
     }
 
     animate();
