--- a/views/layouts/navbar.html
+++ b/views/layouts/navbar.html
@@ -1,5 +1,5 @@
 <div class="nav">
-    <a href="/" class="nav-item nav-count-2"><i class="fas fa-home"></i><span class="invisible">Compose</span></a>
+    <a href="/home" class="nav-item nav-count-2"><i class="fas fa-home"></i><span class="invisible">Compose</span></a>
     <a href="/normas" class="nav-item nav-count-1"><i class="fas fa-ruler"></i><span class="invisible">Profile</span></a>
     <a href="/userlist" class="nav-item nav-count-3"><i class="fas fa-users"></i><span class="invisible">Chats</span></a>
     <a href="#alarm" class="nav-item nav-count-4"><i class="fas fa-dice"></i><span class="invisible">Alarm</span></a>
