--- a/public/less/main.less
+++ b/public/less/main.less
@@ -80,12 +80,25 @@ p {
     width: 100%;
 }
 
-.wrapper p::first-letter {
+/*.wrapper p::first-letter {
     font-size: 4.3em;
-    /*font-family: serif;*/
+    font-family: serif;
     font-family: kaisg;
     margin: -13px 8px -19px 0px;
     float: left;
+}*/
+
+.wrapper p::first-letter {
+    font-size: 4.1em;
+    font-family: kaisg;
+    margin: 3px 9px -2px 0px;
+    float: left;
+    background: #000;
+    line-height: initial;
+    display: block;
+    color: #fff;
+    padding: 0px 10px;
+    box-shadow: inset 0 0 0 4px #000000, inset 0 0 0 5px white;
 }
 
 .inner_wrapper {
