--- a/views/index.html
+++ b/views/index.html
@@ -1,22 +1,19 @@
 <%- include(`./partials/top-part.html`) %>
-<h1>Inicio</h1>
+<h1>Narysium rol</h1>
 <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Hubo una vez, un mestizo que robó la magia cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año, y desde entonces, dicho día sólo apareciera en los calendarios cada cuatro años. Su causante, Lilias, quien buscaba desesperado un lugar donde ponerse a salvo de la que fue, quizás, el mayor genocidio de su gente y todo aquel tocado por la magia, orquestado por la humanidad, trató de huir lejos mediante un arriesgado ritual. 
     <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    Así, desamparado, abusando de su poder, Lilias llegó por accidente a un lugar sin caminos ni direcciones, una oscuridad absoluta en un vacío sepulcral. Incluso la nada se le hacía compasiva en retrospectiva de aquel destino que habría sido una muerte segura.
     <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    El mestizo sintió algo reposar en su nariz. Brillaba. Elevó sus manos para sostenerlo y tratar de examinarlo, pero antes siquiera de rozarlo se alejó como si una corriente de aire lo empujara, a pesar de no sentirse una brisa. Alejándose una distancia prudencial, frente a él se formó una rosa blanca, que alumbraba el vacío con majestuosidad. Se acercó, y por alguna razón sintió en sus manos la capacidad de remodelar aquel vacío a su voluntad, pero a qué costo. 
     <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    Lo comprendió en cuanto empezó a toquetear con aquel poder. Tenía la capacidad de llevarse consigo la magia del mundo que había dejado atrás, de darles un lugar a los suyos, sin embargo, sentía como a medida que los reunía, a medida que iba creando el mundo para ellos, su ser se iba consumiendo. No tenía la fortaleza para soportar la carga de tal energía, por lo que no fue capaz de completar el sello que aislaría el mundo del resto, lo que abriría el nexo de unión, siendo accesible durante esa misma fecha, o mediante atajos como portales.
+    <br><br><br>
+    <center>──── ۞ ────</center>
     <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br><br>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+   
 </p>
 <%- include(`./partials/bot-part.html`) %>
