--- a/views/begin.html
+++ b/views/begin.html
@@ -108,7 +108,7 @@ animation: fadeIn ease 20s;
 <body>
     <h1>
       <span class="text-wrapper">
-            <span class="letters">Sigue el camino de pétalos blancos</span>
+            <span class="letters">Sigue el camino de pétalos</span>
       </span>
     </h1>
     <img class="lighto" src="/assets/light.gif">
@@ -170,8 +170,7 @@ animation: fadeIn ease 20s;
     var msgs = [
         'ellos te marcarán el camino',
         'Pero ten cuidado',
-        'el sendero es oscuro e incierto',
-        'acecha un mal que desconoces',
+        'el sendero alberga horrores',
         'mas no temas',
         'mientras no te alejes del camino',
         'todo irá bien'
