--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,29 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Narysium rol</h1>
 <p>
-    Hubo una vez, un mestizo que robó la magia cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año, y desde entonces, dicho día sólo apareciera en los calendarios cada cuatro años. Su causante, Lilias, quien buscaba desesperado un lugar donde ponerse a salvo de la que fue, quizás, el mayor genocidio de su gente y todo aquel tocado por la magia, orquestado por la humanidad, trató de huir lejos mediante un arriesgado ritual. 
+    Hubo una vez, un mestizo que robó la magia cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año, y desde entonces, dicho día sólo aparece en los calendarios cada cuatro años. Lilias, quien buscaba desesperado un lugar donde ponerse a salvo de la que fue, quizás, porunenocido que ponñia en peligro a su gente, trató de huir lejos mediante un arriesgado ritual. 
     <br><br>
 
-    Así, desamparado, abusando de su poder, Lilias llegó por accidente a un lugar sin caminos ni direcciones, una oscuridad absoluta en un vacío sepulcral. Incluso la nada se le hacía compasiva en retrospectiva de aquel destino que habría sido una muerte segura.
+    Así, desamparado, abusando de su poder, Lilias llegó por accidente a un lugar sin caminos ni direcciones, una oscuridad absoluta en un vacío sepulcral. Incluso la nada se le hacía compasiva en retrospectiva de aquel destino que habría supuesto una muerte segura.
     <br><br>
 
-    El mestizo sintió algo reposar en su nariz. Brillaba. Elevó sus manos para sostenerlo y tratar de examinarlo, pero antes siquiera de rozarlo se alejó como si una corriente de aire lo empujara, a pesar de no sentirse una brisa. Alejándose una distancia prudencial, frente a él se formó una rosa blanca, que alumbraba el vacío con majestuosidad. Se acercó, y por alguna razón sintió en sus manos la capacidad de remodelar aquel vacío a su voluntad, pero a qué costo. 
+    El mestizo sintió algo reposar en su nariz. Brillaba. Elevó sus manos para sostenerlo y tratar de examinarlo, pero antes siquiera de rozarlo se alejó de él como si una corriente de aire se lo llevara, a pesar de no sentirse una brisa. Alejándose una distancia prudencial, frente a él se formó una rosa blanca, que alumbraba el vacío con majestuosidad. Se acercó, y por alguna razón sintió en sus manos la capacidad de remodelar aquel vacío a su voluntad ¿Pero a qué costo? 
     <br><br>
 
     Lo comprendió en cuanto empezó a toquetear con aquel poder. Tenía la capacidad de llevarse consigo la magia del mundo que había dejado atrás, de darles un lugar a los suyos, sin embargo, sentía como a medida que los reunía, a medida que iba creando el mundo para ellos, su ser se iba consumiendo. No tenía la fortaleza para soportar la carga de tal energía, por lo que no fue capaz de completar el sello que aislaría el mundo del resto, lo que abriría el nexo de unión, siendo accesible durante esa misma fecha, o mediante atajos como portales.
     <br><br><br>
-    <center>──── ۞ ────</center>
-    <br><br>
+
+    <center>❃ ❃ ❃</center>
+    <br><br><br>
+
+    <p>
+        Una colosal academia rodeada por cadenas montañosas en el centro rige el destino de Narysium. El consejo guía a las nuevas promesas y mantiene el orden en el continente de cuyas fronteras, más allá de las aguas, se hallan en penumbra. Diversas naciones han crecido al son de la academia y algunas se nutren de ella para su sustento, pero no todas. 
+        <br><br>
+        
+        Desde las diversas naciones sumergidas en el mar de Narysium, pasando por las costas de Arcada y los bosques de Corianand hasta las dunas de Olvion, conviven criaturas fantásticas y habitantes tocados por la magia. Estudiar el la academia magna es un privilegio que no todos pueden permitirse pues necesitan una carta de presentación elaborada por un mentor errante. Aquellos que deciden seguir otra vía deben pasar una prueba de ingreso en presencia del consejo. 
+        <br><br>
+    </p>
+   
    
 </p>
 <%- include(`./partials/bot-part.html`) %>
