--- a/views/layouts/navbar.html
+++ b/views/layouts/navbar.html
@@ -2,7 +2,7 @@
     <a href="/home" class="nav-item nav-count-2"><i class="fas fa-home"></i><span class="invisible">Compose</span></a>
     <a href="/normas" class="nav-item nav-count-1"><i class="fas fa-ruler"></i><span class="invisible">Profile</span></a>
     <a href="/userlist" class="nav-item nav-count-3"><i class="fas fa-users"></i><span class="invisible">Chats</span></a>
-    <a href="#alarm" class="nav-item nav-count-4"><i class="fas fa-dice"></i><span class="invisible">Alarm</span></a>
+    <a href="/journal" class="nav-item nav-count-4"><i class="fas fa-dice"></i><span class="invisible">Alarm</span></a>
     <a href="#toggle" class="mask"><i class="fas fa-circle-notch"></i></a>
 </div>
 
