--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Narysium rol</h1>
 <p>
-    Hubo una vez, un mestizo que robó la magia cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año, y desde entonces, dicho día sólo aparece en los calendarios cada cuatro años. Lilias, quien buscaba desesperado un lugar donde ponerse a salvo de la que fue, quizás, porunenocido que ponñia en peligro a su gente, trató de huir lejos mediante un arriesgado ritual. 
+    Hubo una vez, un mestizo que robó la magia cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año, y desde entonces, dicho día sólo aparece en los calendarios cada cuatro años. Fue Lilias, quien buscaba desesperado un lugar donde ponerse a salvo del genocido que pretendía erradicar la magia de la tierra, trató de huir lejos mediante un arriesgado ritual. 
     <br><br>
 
     Así, desamparado, abusando de su poder, Lilias llegó por accidente a un lugar sin caminos ni direcciones, una oscuridad absoluta en un vacío sepulcral. Incluso la nada se le hacía compasiva en retrospectiva de aquel destino que habría supuesto una muerte segura.
